# QuickVerifies

./: .gitignore  CMakeLists.txt  README.md
models/: face_mask_detection.prototxt
src/core/: capture.cpp  capture.h  chcp.cpp  chcp.h  face_recognize.cpp  face_recognize.h  mask_recognize.cpp  mask_recognize.h  register.cpp  register.h  result_back.cpp  result_back.h
src/util/: getImage.h
test/: main.cpp
